// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DBDataSource multi-column loader can query data correctly with casing differences 1`] = `
{
  "camelCase": "value1",
  "code": "",
  "dateTest": 2021-04-19T00:00:00.000Z,
  "id": 32,
  "jsonbTest": {
    "a": 1,
  },
  "name": "",
  "nullable": null,
  "tsTest": 2020-12-05T00:00:00.000Z,
  "withDefault": "anything",
}
`;

exports[`DBDataSource multi-column loader can query data successfully 1`] = `
[
  {
    "camelCase": "",
    "code": "secret",
    "dateTest": 2021-04-19T00:00:00.000Z,
    "id": 30,
    "jsonbTest": {
      "a": 1,
    },
    "name": "hello",
    "nullable": null,
    "tsTest": 2020-12-05T00:00:00.000Z,
    "withDefault": "anything",
  },
]
`;

exports[`DBDataSource when there is data in the table can set query options on a loader 1`] = `
[
  {
    "camelCase": "",
    "code": "any",
    "dateTest": 2021-04-19T00:00:00.000Z,
    "id": 20,
    "jsonbTest": {
      "a": 1,
    },
    "name": "any",
    "nullable": null,
    "tsTest": 2020-12-05T00:00:00.002Z,
    "withDefault": "asdf",
  },
  {
    "camelCase": "",
    "code": "any",
    "dateTest": 2021-04-19T00:00:00.000Z,
    "id": 19,
    "jsonbTest": {
      "a": 1,
    },
    "name": "any",
    "nullable": null,
    "tsTest": 2020-12-05T00:00:00.001Z,
    "withDefault": "asdf",
  },
]
`;
